# iroha

./: .clang-format  .gitignore  CMakeLists.txt  clean.sh  env.sh
.circleci/: config.yml
benchmark/: CMakeLists.txt
cmake/: analysis.cmake  dependencies.cmake  functions.cmake
cmake/Modules/: Findboostmultiprecision.cmake  Findcliutils.cmake
docker/: docker-compose.yml  local-develop.sh
docker/develop/: Dockerfile
iroha-cli/: CMakeLists.txt  client.cpp  main.cpp
iroha-cli/impl/: grpc_response_handler.cpp  keys_manager_impl.cpp  query_response_handler.cpp
iroha-cli/interactive/: CMakeLists.txt  interactive_cli.hpp  interactive_common_cli.hpp  interactive_query_cli.hpp  interactive_transaction_cli.hpp
irohad/: CMakeLists.txt
irohad/ametsuchi/: CMakeLists.txt  block_query.hpp  config.hpp  storage.hpp  wsv_command.hpp  wsv_query.hpp
irohad/cli/: CMakeLists.txt  common.hpp  defaults.hpp  env-vars.hpp  flags.hpp
irohad/config/: CMakeLists.txt  config.hpp
irohad/crypto_provider/: signer.hpp  verifier.hpp
irohad/main/: CMakeLists.txt  application.cpp  application.hpp  common.hpp  env-vars.hpp  flags.hpp  iroha_conf_loader.hpp  irohad.cpp  main.cpp  service.cpp  service.hpp
irohad/main/config/: CMakeLists.txt  config.hpp  flags.hpp
irohad/main/config/gflags_impl/: flags.cpp  gflags_config.cpp
irohad/main/config/impl/: CMakeLists.txt  flags.cpp  gflags_config.cpp  gflags_config.hpp
irohad/model/: CMakeLists.txt  account.hpp  common.hpp  domain.hpp  peer.hpp  permissions.hpp  query_execution.hpp  transaction.hpp
irohad/model/converters/: CMakeLists.txt  json_common.hpp  json_query_factory.hpp  json_transaction_factory.hpp  pb_common.hpp  pb_common_face.hpp  pb_query_factory.hpp  pb_query_response_factory.hpp
irohad/model/converters/impl/: json_command_factory.cpp  json_common.cpp  json_query_factory.cpp  json_transaction_factory.cpp  pb_block_factory.cpp  pb_command_factory.cpp  pb_common_face.cpp  pb_query_factory.cpp  pb_query_response_factory.cpp  pb_transaction_factory.cpp
irohad/multi_sig_transactions/: gossip_propagation_strategy.hpp
irohad/network/: CMakeLists.txt
irohad/ordering/: CMakeLists.txt
irohad/simulator/: CMakeLists.txt
irohad/synchronizer/: CMakeLists.txt
irohad/torii/: CMakeLists.txt  config.hpp
irohad/validation/: CMakeLists.txt
libiroha/: CMakeLists.txt
libiroha/object/: CMakeLists.txt
libs/: CMakeLists.txt
libs/amount/: CMakeLists.txt  amount.cpp  amount.hpp
libs/common/: CMakeLists.txt  files.cpp  helper.hpp  operators.hpp  result.cpp  result.hpp  types.hpp  visitor.hpp
libs/crypto/: CMakeLists.txt  ed25519_impl.cpp  hash.cpp  keys_manager.hpp  keys_manager_impl.cpp  keys_manager_impl.hpp  lookup3.c
libs/generator/: CMakeLists.txt  generator.cpp  generator.hpp
libs/ip_tools/: CMakeLists.txt
libs/logger/: CMakeLists.txt
libs/parser/: CMakeLists.txt
libs/secure/: CMakeLists.txt  prng.hpp  util.cpp  util.hpp
libs/timer/: CMakeLists.txt
libs/torii_utils/: CMakeLists.txt
libs/util/: CMakeLists.txt  filesystem.cpp  filesystem.hpp  network.hpp  string.hpp  validator.hpp
schema/: CMakeLists.txt  block.proto  queries.proto
scripts/: build-local-image.sh  build-test-swarm.sh  local-develop.sh
shared_model/cryptography/: keypair.hpp
shared_model/interfaces/: impl.cpp
test/framework/: CMakeLists.txt  (+2 more)
test/integration/: CMakeLists.txt  client_test.cpp
test/integration/consensus/: consensus_sunny_day.cpp
test/integration/pipeline/: CMakeLists.txt  tx_pipeline_integration_test.cpp
test/module/libs/: CMakeLists.txt  result_test.cpp
test/module/libs/crypto/: CMakeLists.txt  crypto_test.cpp  ed25519_test.cpp
test/module/libs/map_queue/: CMakeLists.txt
test/module/libs/secure/: CMakeLists.txt  secure_test.cpp
test/module/libs/util/: CMakeLists.txt  filesystem_test.cpp  util_test.cpp
(+126 files in other folders)
